js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-do-while-empty-str-is-valid-assign-expr.js
do
{
import
(
'
'
)
;
}
while
(
false
)
;
reportCompare
(
0
0
)
;
