js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-import-defer-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
do
{
import
.
defer
(
)
;
}
while
(
false
)
;
